--- a/assets/main.css
+++ b/assets/main.css
@@ -9,3 +9,49 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+/* .page {
+  transition: 0.3s map-get($transition, "swing") !default;
+}
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s ease-out;
+  animation: slide-out
+} */
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-leave-to {
+  opacity: 0;
+}
+
+.page-enter-active {
+  animation: slide-in 300ms;
+  transition: opacity 0.5s ease-out;
+}
+.page-leave-active {
+  animation: slide-out 300ms;
+  transition: opacity 0.5s ease-out;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(15px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes slide-out {
+  from {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-15px);
+    opacity: 0;
+  }
+}
