add background and data buttons to fees form

--- a/assets/main.css
+++ b/assets/main.css
@@ -55,3 +55,16 @@ input[type="number"] {
     opacity: 0;
   }
 }
+
+.overlay {
+  background-color: rgba(71, 71, 71, 0.5);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 0;
+}
+
+.background {
+  background-image: url("/main.jpg");
+}
