--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,4 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
+$body-font-family: "Raleway";
+$heading-font-family: "Raleway";
+$font-size-root: 18px;
+@import "~vuetify/src/styles/styles.sass";
